Fix navbar overlapping content

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -21,3 +21,7 @@ p {
 a {
   color: $celadon-blue;
 }
+
+.container {
+  padding-top: 100px;
+}
